2009-07-07  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40328
	PR tree-optimization/40669
	* tree-tailcall.c (adjust_accumulator_values): Properly
	set DECL_GIMPLE_REG_P.
	(adjust_return_value): Likewise.
	(tree_optimize_tail_calls_1): Likewise.
	* fold-const.c (fold_convert): Fold the built COMPLEX_EXPR.

2009-07-02  Richard Guenther  <rguenther@suse.de>

	PR middle-end/40585
	* tree-cfg.c (gimple_can_duplicate_bb_p): Disallow duplicating
	basic blocks with GIMPLE_RESX.

2009-07-01  Ben Elliston  <bje@au.ibm.com>

	Backport from mainline:

	2008-10-04  Anton Blanchard  <anton@samba.org>

	* config/rs6000/rs6000.c (rs6000_emit_sync): Use gen_lwsync().
	(rs6000_split_atomic_op): Same.
	(rs6000_split_compare_and_swap): Same.
	(rs6000_split_compare_and_swapqhi): Same.

2009-06-30  Ira Rosen  <irar@il.ibm.com>

	PR tree-optimization/40542
	* tree-vect-analyze.c (vect_determine_vectorization_factor): Don't 
	vectorize volatile types.

2009-06-29  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/40579
	* tree-vrp.c (vrp_evaluate_conditional_warnv): Bail out early if
	the IL to simplify has constants that overflowed.

2009-06-28  Uros Bizjak  <ubizjak@gmail.com>

	PR tree-optimization/40550
	* tree-vect-generic.c (expand_vector_operations_1): Compute in
	vector_compute_type only when the size of vector_compute_type is
	less than the size of type.

2009-06-27  Kai Tietz  <kai.tietz@onevision.com>

	Merged from trunk rev/148061
	2009-06-01  Jakub Jelinek  <jakub@redhat.com>
	PR other/40024
	* emutls.c (__emutls_get_address): Change arr->size to mean number
	of allocated arr->data entries instead of # of slots + 1.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	* c-parser.c (c_parser_postfix_expression): Fix merge glitch.

2009-06-25  Richard Guenther  <rguenther@suse.de>

	Backport from mainline
	2009-01-07  Richard Guenther  <rguenther@suse.de>

	PR middle-end/38751
	* fold-const.c (extract_muldiv): Remove obsolete comment.