@@ -1,6 +1,14 @@
 2009-07-10  Richard Guenther  <rguenther@suse.de>
 
 	Backport from mainline
+	2009-01-28  Jakub Jelinek  <jakub@redhat.com>
+
+	PR middle-end/38934
+	* gcc.dg/pr38934.c: New test.
+
+2009-07-10  Richard Guenther  <rguenther@suse.de>
+
+	Backport from mainline
 	2009-01-09  John F. Carr  <jfc@mit.edu>
 
 	PR c++/37877
